Hakathon/Manifest file/Service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-clusterip
spec:
  type: ClusterIP
  selector:
      app: service_1
  ports:
  - port: 3500
    protocol: TCP
