Hakathon/Manifest file/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: test.com
      http:
        paths:
          - path: /ap
            pathType: Prefix
            backend:
              service:
                name: my-clusterip
                port:
                  number: 80
